--- a/models/contact/columns.yaml
+++ b/models/contact/columns.yaml
@@ -24,7 +24,7 @@ columns:
         label: johngerome.sm::lang.contacts.created_at
         type: datetime
         searchable: true
-    attributes:
+    contact_att:
         label: johngerome.sm::lang.contacts.attributes
         type: partial
         path: ~/plugins/johngerome/sm/models/contact/attributes/_attributes_column.htm
