--- a/models/contact/fields.yaml
+++ b/models/contact/fields.yaml
@@ -15,3 +15,6 @@ fields:
     projects:
         label: johngerome.sm::lang.contacts.project
         type: relation
+    contact_att:
+        label: johngerome.sm::lang.contacts.attributes
+        disabled: false
